Fixed some spacing with CSS

--- a/style.css
+++ b/style.css
@@ -22,5 +22,6 @@
     font-size: 18px;
 }
 .botspace {
+    margin-top: 5px;
     margin-bottom: 20px;
 }
